first version. issues with gaps, tape, background

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -6,14 +6,15 @@
 
     --color-grey-text: #373737;
     --font-family: 'Montserrat', sans-serif;
+    
+    font-family: var(--font-family);
+    font-size: 16px;
 }
 
 html {
-    overflow: hidden;
     width: 100%;
 }
 
 body {
-    overflow: hidden;
     width: 100%;
 }
