--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,3 +6,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+h2 {
+    font-size: 2.25rem;
+    font-weight: 700;
+}
